@@ -1,4 +1,5 @@
 2006-08-11  Alex Roitman  <shura@gramps-project.org>
+	* src/GrampsDb/_GrampsBSDDB.py: Use txn-capable metadata.
 	* src/Editors/_EditFamily.py: Use cPickle.
 
 2006-08-10  Don Allingham  <don@gramps-project.org>
